<resources>
    <string name="app_name">OVS-SVC</string>
    <string name="permission_request">permission request</string>
    <string name="camera_error">camera error</string>
    <string name="stop">stop</string>
    <string name="record">record</string>
    <string name="description_info">Description</string>
    <string name="paper_name">Oppurtunistic Video Streaming \n using \n Scalable Video Coding</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="logout">Logout</string>
    <string name="video_time">Video time(seconds)</string>
    <string name="video_framerate">Video framerate(fps)</string>
    <string name="video_button">Video button</string>
    <string name="resolution_display">Low/Medium Resolution</string>
    <string name="video_time_hint">10</string>
    <string name="video_fps_hint">30</string>
    <string name="number_of_files">Number of Files</string>
    <string name="number_of_md">Number of .md</string>
    <string name="number_of_l0t1">Number of L0T1</string>
    <string name="destination_address">Dest. Addr</string>
    <string name="source_address">Source address:</string>
    <string name="delay_time_mins">Delay time(mins)</string>
</resources>
