<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <TextureView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/textureView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/videoOnlineImageButton"
        android:contentDescription="@string/video_button"
        android:src="@drawable/video"
        android:layout_marginTop="105dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="49dp" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textureView"
        android:id="@+id/framerate_text"
        android:text="@string/video_framerate"
        android:layout_marginTop="52dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/framerate_input"
        android:layout_below="@id/textureView"
        android:layout_marginTop="36dp"
        android:hint="@string/video_fps_hint"
        android:layout_toEndOf="@id/framerate_text"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/video_time_text"
        android:layout_below="@id/textureView"
        android:text="@string/video_time"
        android:layout_marginTop="100dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/videotime_input"
        android:layout_below="@id/textureView"
        android:layout_marginTop="84dp"
        android:hint="@string/video_time_hint"
        android:inputType="number"
        android:layout_toEndOf="@id/video_time_text"
        android:layout_marginStart="20dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resolution_switch"
        android:layout_below="@id/videotime_input"
        android:text="@string/resolution_display"
        android:textAlignment="textEnd"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destination_address"
        android:layout_below="@id/textureView"
        android:layout_toEndOf="@id/framerate_input"
        android:layout_marginStart="20dp"
        android:text="@string/destination_address"
        android:layout_marginTop="52dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destination_address_input"
        android:layout_below="@id/textureView"
        android:layout_marginTop="40dp"
        android:hint="abcdef"
        android:layout_toEndOf="@id/destination_address"
        android:layout_marginStart="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/source_address_text"
        android:layout_below="@id/destination_address"
        android:text="@string/source_address"
        android:layout_toEndOf="@id/videotime_input"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delay_time"
        android:layout_below="@id/source_address_text"
        android:layout_toEndOf="@id/resolution_switch"
        android:layout_marginStart="12dp"
        android:text="@string/delay_time_mins"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delay_time_input"
        android:layout_below="@id/source_address_text"
        android:layout_marginTop="24dp"
        android:hint="30"
        android:inputType="number"
        android:layout_toEndOf="@id/delay_time"
        android:layout_marginStart="8dp" />


</RelativeLayout>