<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/paper_name"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp">

        <Button
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/splash_sender_button"
            android:text="@string/sender"/>

        <Button
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/splash_receiver_button"
            android:text="@string/receiver"/>

    </LinearLayout>

</RelativeLayout>